added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,41 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The head element contains meta elements, which store metadata that is not visible to the user.</li>
+          <li>The body element is an example of a "semantic" element, wherein the name of the element describes its content and  the role it plays on the webpage. It is important to use semantic elements when possible.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A: tracks all files (specific file names can be put in to track only those files)</li>
+          <li>git commit -m "comment": commits files, with description as defined in comment</li>
+          <li>Sync your local code with the remote version often!</li>
+          <li>Make sure to make changes in branches, NOT main, so if something goes wrong it's easy to revert and doesn't break everythiing.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>   
+      </section>
     </main>
 
     <footer>
