--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,6 +13,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
+      <div class="tenor-gif-embed" display="block" data-postid="23179607" data-share-method="host" data-aspect-ratio="0.715625" data-width="10%"><a href="https://tenor.com/view/deltarune-queen-gif-23179607">Deltarune Queen Sticker</a>from <a href="https://tenor.com/search/deltarune-stickers">Deltarune Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -44,13 +46,18 @@
       <section class="card" id="javascript-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>There are 3 ways to use CSS: inline CSS (applied to specific HTML tags), internal style sheet (style sheets defined directly in the HTML code), and external style sheets (style sheets defined in a separate CSS file)</li>
+          <li>External style sheets are a good example of separation. They must be linked to the HTML using a link element in the head of the HTML file.</li>
+          <li>CSS statements consist of the element(or elements), the property, and the value to be applied to the property.</li>
         </ul>   
       </section>
     </main>
 
     <footer>
       <p>I can code!</p>
+      <img src="./assets/duckwalk.gif" alt="A duck walking along happily"/>
     </footer>
   </body>
 </html>
