added some console statements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <div class="tenor-gif-embed" display="block" data-postid="23179607" data-share-method="host" data-aspect-ratio="0.715625" data-width="10%"><a href="https://tenor.com/view/deltarune-queen-gif-23179607">Deltarune Queen Sticker</a>from <a href="https://tenor.com/search/deltarune-stickers">Deltarune Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
@@ -59,5 +60,6 @@
       <p>I can code!</p>
       <img src="./assets/duckwalk.gif" alt="A duck walking along happily"/>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
