added some more console statements with loops and conditionals

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>There are 3 ways to use CSS: inline CSS (applied to specific HTML tags), internal style sheet (style sheets defined directly in the HTML code), and external style sheets (style sheets defined in a separate CSS file)</li>
+          <li>External style sheets are a good example of separation. They must be linked to the HTML using a link element in the head of the HTML file.</li>
+          <li>CSS statements consist of the element(or elements), the property, and the value to be applied to the property.</li>
         </ul>
       </section>
    
@@ -40,18 +44,21 @@
           <li>git add -A: tracks all files (specific file names can be put in to track only those files)</li>
           <li>git commit -m "comment": commits files, with description as defined in comment</li>
           <li>Sync your local code with the remote version often!</li>
-          <li>Make sure to make changes in branches, NOT main, so if something goes wrong it's easy to revert and doesn't break everythiing.</li>
+          <li>Make sure to make changes in branches, NOT main, so if something goes wrong it's easy to revert and doesn't break everything.</li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
-        <h2>CSS</h2>
+        <h2>JavaScript</h2>
         <ul>
-          <li>A margin indicates how much space we want around the outside of an element.</li>
-          <li>A padding indicates how much space we want around the content inside an element.</li>
-          <li>There are 3 ways to use CSS: inline CSS (applied to specific HTML tags), internal style sheet (style sheets defined directly in the HTML code), and external style sheets (style sheets defined in a separate CSS file)</li>
-          <li>External style sheets are a good example of separation. They must be linked to the HTML using a link element in the head of the HTML file.</li>
-          <li>CSS statements consist of the element(or elements), the property, and the value to be applied to the property.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Arrays store multiple pieces of data, which can be of different types.</li>
+          <li>If statements execute the code within the curly brackets if the value returned by the statement evaluated to truthy (aka, all values except false, 0, -0, 0n, "", null, undefined, NaN)</li>
+          <li>For loops can be used to iterate through arrays; they execute a certain number of times as defined in their declaration, which can be set to the length of the array</li> 
+          <li>The data stored in arrays can be accessed via their indices; for example "array[3]" accesses the data stored in the 4th slot (because arrays start at 0!)</li>
+          <li>You can print statements to the console (which can be accessed through Chrome) via consol.log(message here)</li>
+          <li>A function is a block of code that performs a specific task. When you write a function, you can call it very easily like so: function(argument 1, argument 2); </li>       
         </ul>   
       </section>
     </main>
