--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li>The body element represents the visible content shown to the user.</li>
           <li>The head element contains meta elements, which store metadata that is not visible to the user.</li>
           <li>The body element is an example of a "semantic" element, wherein the name of the element describes its content and  the role it plays on the webpage. It is important to use semantic elements when possible.</li>
+          <li>You can create classes and set those classes to have certain features using CSS like so: .classname { CSS stuff}</li>
         </ul>
       </section>
    
